--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,1 +1,23 @@
-<h1>Productos</h1>
+<h1>Lista de Productos</h1>
+  <table border="1px">
+  <tr>
+    <th>id</th>
+    <th>title</th>
+    <th>description</th>
+    <th>price</th>
+    <th>thumbnail</th>
+    <th>code</th>
+    <th>stock</th>
+  </tr>
+  {{#each productos}}
+  <tr>
+    <td>{{this.id}}</td>
+    <td>{{this.title}}</td>
+    <td>{{this.description}}</td>
+    <td>{{this.price}}</td>
+    <td>{{this.thumbnail}}</td>
+    <td>{{this.code}}</td>
+    <td>{{this.stock}}</td>
+  </tr>
+  {{/each}}
+  </table>
