--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,4 +1,6 @@
-<h1>Lista de Productos</h1>
+<h1>Bienvenido {{ profile.first_name }} tu rol es {{profile.role}}</h1>
+<h2>Lista de Productos</h2>
+<a href="/api/sessions/logout"><button>Cerrar Sesion32</button></a>
 <table border="1px">
   <tr>
     <th>id</th>
