desafio 13 integrando tu ecommerce

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,6 +1,7 @@
 <h1>Bienvenido {{ profile.first_name }} tu rol es {{profile.role}}</h1>
 <h2>Lista de Productos</h2>
 <a href="/api/sessions/logout"><button>Cerrar Sesion32</button></a>
+<button onclick="leerCookie()">Mostrar datos de token</button>
 <table border="1px">
   <tr>
     <th>id</th>
