agregando chat modificando modelo usuario, agregando modelo message, generando controller de cart, cambiando enfoque de uso de comunicacion de socket en producto agregando en el req el io del socket

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -14,7 +14,8 @@
   </tr>
   {{#each productos.payload}}
   <tr>
-    <td>{{this._id}}</td>
+    {{!-- <td>{{this._id}}</td> --}}
+    <td><button class="btn btn-success" onclick="addProductToCart('{{this._id}}')">AddToCart</button></td>
     <td>{{this.title}}</td>
     <td>{{this.description}}</td>
     <td>{{this.price}}</td>
@@ -32,3 +33,27 @@
   <a href="{{productos.nextLink}}">Siguiente</a>
   {{/if}}
 </div>
+<script>
+    addProductToCart = (pid) => {
+        fetch(`/api/carts`, {
+            method: 'post'
+        })
+            .then(result => result.json())
+            .then(result => {
+                if (result.status === 'error') throw new Error(result.error)
+                return result.payload._id
+            })
+            .then(cid => 
+                fetch(`/api/carts/${cid}/product/${pid}`, {
+                    method: 'post'
+                })
+            )
+            .then(result => result.json())
+            .then(result => {
+                if (result.status === 'error') throw new Error(result.error)
+                alert(`Ok. Todo salió bien! :)\nEl producto se agregó al carrito con id=${result.payload._id}!`)
+            })
+            .catch(err => alert(`Ocurrió un error :(\n${err}`))
+        
+    }
+</script>
