eliminando session generando corrigiendo devoluciones de carts y garantizando guardado de sesion al iniciar el login con save(), agregando a cada usuario su propio carro

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -48,8 +48,15 @@
                     method: 'post'
                 })
             )
-            .then(result => result.json())
             .then(result => {
+              console.log("antes de json")
+              console.log(result)
+              return result.json()}
+              )
+            .then(result => {
+                console.log(result.status === 'error')
+                console.log("despues de json")
+                console.log(result)
                 if (result.status === 'error') throw new Error(result.error)
                 alert(`Ok. Todo salió bien! :)\nEl producto se agregó al carrito con id=${result.payload._id}!`)
             })
