--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -8,15 +8,18 @@
   <title>Productos</title>
   <script>
     function leerCookie() {
-      fetch('/api/sessions/current')
-        .then(response => response.json())
-        .then(data => {
-          // Mostrar los datos en un alert
-          alert(JSON.stringify(data));
-        })
-        .catch(error => {
-          console.error('Hubo un error:', error);
-        });
+      return new Promise((resolve, reject) => {
+        fetch('/api/sessions/current')
+          .then(response => response.json())
+          .then(data => {
+            // Mostrar los datos en un alert
+            resolve(data)
+          })
+          .catch(error => {
+            reject(error);
+          });
+      })
+
     }
   </script>
 </head>
